test/fail/integration/_fail_sem_decl_funct_4.hs
x' :: Int -> Int -> Int
x' y = y
main = print "hello"